unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/loan__Loan_account_Due_Details__c.object-meta.xml
<CustomObject>
    <description>Invoices/bills for customer loans.</description>
    <label>Bills</label>
    <nameField>
        <displayFormat>PCN-{0000000000}</displayFormat>
        <label>Due Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>