unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Actual_Tolerance_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Actual_Tolerance_Amount__c</fullName>
    <description>This is the tolerance amount calculated from the bill. It will be populated on billing based on the tolerance defined on Loan account.</description>
    <inlineHelpText>Populated from loan account on the basis of tolerance amount calculated.</inlineHelpText>
    <label>Actual Tolerance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>