unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Average_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>loan__Average_Daily_Balance__c</fullName>
    <description>Average daily balance of the billing cycle</description>
    <inlineHelpText>Average daily balance that was maintained from billing start date to billing end date</inlineHelpText>
    <label>Average Daily Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>