unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Balance_Amount__c</fullName>
    <formula>loan__Due_Amt__c -  loan__Payment_Amt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>