unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Bill_Cycle_End_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Bill_Cycle_End_Date__c</fullName>
    <inlineHelpText>end date of current billing cycle</inlineHelpText>
    <label>Bill Cycle End Date</label>
    <type>Date</type>
</CustomField>