unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Bill_Cycle_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Bill_Cycle_Start_Date__c</fullName>
    <inlineHelpText>Date from which billing period starts.</inlineHelpText>
    <label>Bill Cycle Start Date</label>
    <type>Date</type>
</CustomField>