unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Closing_Balance__c.field-meta.xml
<CustomField>
    <fullName>loan__Closing_Balance__c</fullName>
    <description>Principal balance maintained as on the last day of current billing cycle. This is the sum of all disbursals minus the sum of all payments made till the last day of the current billing cycle.</description>
    <inlineHelpText>Principal balance maintained as on the last day of current billing cycle. This is the sum of all disbursals minus the sum of all payments made till the last day of the current billing cycle.</inlineHelpText>
    <label>Closing Principal Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>