unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Compounding_Interest_Billed__c.field-meta.xml
<CustomField>
    <fullName>loan__Compounding_Interest_Billed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compounding Interest Billed (+)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>