unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__DD_Primary_Flag__c.field-meta.xml
<CustomField>
    <fullName>loan__DD_Primary_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>