unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Due_Amt__c.field-meta.xml
<CustomField>
    <fullName>loan__Due_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Due Amount</description>
    <label>Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>