unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Due_Date__c</fullName>
    <description>Due date of the due.</description>
    <inlineHelpText>Due Date of the Due</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>