unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Due_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Due_Type__c</fullName>
    <description>Due Type Id</description>
    <label>Due Type Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>