unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Due_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>loan__Due_Type_Description__c</fullName>
    <description>Description of Due, to be shown on UI</description>
    <label>Due Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>