unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Fees_Billed__c.field-meta.xml
<CustomField>
    <fullName>loan__Fees_Billed__c</fullName>
    <label>Billed Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>