unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Fees_Due__c.field-meta.xml
<CustomField>
    <fullName>loan__Fees_Due__c</fullName>
    <inlineHelpText>Fees due in this billing cycle</inlineHelpText>
    <label>Fees Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>