unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Late_Charge_Applied__c.field-meta.xml
<CustomField>
    <fullName>loan__Late_Charge_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late Charge Applied</label>
    <type>Checkbox</type>
</CustomField>