unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Account__c</fullName>
    <label>Loan Account</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipName>Dues_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>