unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Next_Due_Date_Without_Holiday_Treatment__c.field-meta.xml
<CustomField>
    <fullName>loan__Next_Due_Date_Without_Holiday_Treatment__c</fullName>
    <description>Internal field : This field will hold the actual next installment date of the subsequent bill irrespective of holidays specified with the business hours, if any, attached with the product.</description>
    <inlineHelpText>Internal field : This field will hold the actual next installment date of the subsequent bill irrespective of holidays specified with the business hours, if any, attached with the product.</inlineHelpText>
    <label>Next Due Date Without Holiday Treatment</label>
    <type>Date</type>
</CustomField>