unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>loan__Opening_Balance__c</fullName>
    <description>Principal balance maintained as on the first day of current billing cycle. This is the sum of all disbursals minus the sum of all payments made till the first day of the current billing cycle.</description>
    <inlineHelpText>Principal balance maintained as on the first day of current billing cycle. This is the sum of all disbursals minus the sum of all payments made till the first day of the current billing cycle.</inlineHelpText>
    <label>Opening Principal Balance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>