unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Date__c</fullName>
    <description>Payment Date.</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>