unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Payment_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Satisfied</label>
    <type>Checkbox</type>
</CustomField>