unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Payoff_As_Of_Previous_Bill__c.field-meta.xml
<CustomField>
    <fullName>loan__Payoff_As_Of_Previous_Bill__c</fullName>
    <description>The payoff amount as on the day that the previous bill was generated.</description>
    <inlineHelpText>The payoff amount as on the day that the previous bill was generated.</inlineHelpText>
    <label>Payoff As Of Previous Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>