unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Payoff_Balance__c.field-meta.xml
<CustomField>
    <fullName>loan__Payoff_Balance__c</fullName>
    <inlineHelpText>This field contains the amount needed to payoff the loan after this bill has been generated.</inlineHelpText>
    <label>Payoff Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>