unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Previous_Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Previous_Bill_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total amount due during last billing cycle</inlineHelpText>
    <label>Previous Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>