unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Principal_Billed__c.field-meta.xml
<CustomField>
    <fullName>loan__Principal_Billed__c</fullName>
    <description>Billed Principal Amount.</description>
    <label>Billed Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>