unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Remarks__c.field-meta.xml
<CustomField>
    <fullName>loan__Remarks__c</fullName>
    <description>Remarks for bill amount calculation.</description>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>