unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Rescheduled_flag__c.field-meta.xml
<CustomField>
    <fullName>loan__Rescheduled_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this flag is checked that means this bills was marked as not enabled as part of Rescheduled transaction posted on this loan account.</description>
    <inlineHelpText>If this flag is checked that means this bills was marked as not enabled as part of Rescheduled transaction posted on this loan account.</inlineHelpText>
    <label>Is Rescheduled</label>
    <type>Checkbox</type>
</CustomField>