unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Satisfied_With_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>loan__Satisfied_With_Tolerance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that the bill is satisfied due to tolerance applied on the bill</description>
    <inlineHelpText>This indicates that the bill is satisfied due to tolerance applied on the bill</inlineHelpText>
    <label>Satisfied With Tolerance</label>
    <type>Checkbox</type>
</CustomField>