unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__TDS_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>loan__TDS_Amount_Due__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total TDS Amount Due</description>
    <label>TDS Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>