unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__TDS_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__TDS_Paid_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total TDS Amount Paid</description>
    <label>TDS Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>