unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__TDS_Percentage__c.field-meta.xml
<CustomField>
    <fullName>loan__TDS_Percentage__c</fullName>
    <description>Percenatge of TDS applied on Interest</description>
    <label>TDS Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>