unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Tolerance__c.field-meta.xml
<CustomField>
    <fullName>loan__Tolerance__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>This is will be populated on billing based on the tolerance rate defined on Loan account.</description>
    <inlineHelpText>Populated from loan account on the basis of tolerance defined.</inlineHelpText>
    <label>Tolerance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>