unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Total_Amount_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Amount_Disbursed__c</fullName>
    <inlineHelpText>Amount disbursed during billing cycle</inlineHelpText>
    <label>Total Amount Disbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>