unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Total_Interest_Waived__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Interest_Waived__c</fullName>
    <description>Total interest waived during this billing cycle</description>
    <inlineHelpText>Total interest waived during this billing cycle</inlineHelpText>
    <label>Interest Waived In Cycle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>