unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Total_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Payments_Received__c</fullName>
    <inlineHelpText>total payment amount received during this billing cycle.</inlineHelpText>
    <label>Total Payments Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>