unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Date__c</fullName>
    <description>Transaction date</description>
    <inlineHelpText>Date on which the transaction got created.</inlineHelpText>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>