unpackaged/main/default/objects/loan__Loan_account_Due_Details__c/fields/loan__waiver_applied__c.field-meta.xml
<CustomField>
    <fullName>loan__waiver_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if any applicable waiver  is applied on this bill. Will be set to true when applied</description>
    <label>Waiver Applied</label>
    <type>Checkbox</type>
</CustomField>